[gd_scene format=3 uid="uid://wggu72pyv2j5"]

[ext_resource type="Script" uid="uid://bpejgvdsna31j" path="res://Scripts/sword.gd" id="1_goa0h"]
[ext_resource type="Texture2D" uid="uid://or0pjqges0mb" path="res://Assets/characters/sword.png" id="2_6wdhb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wdhb"]
size = Vector2(251, 76)

[sub_resource type="Animation" id="Animation_d6wag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5707964]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ksptp"]
resource_name = "dash"
length = 0.26666668
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.16666667, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.6, 0.6), Vector2(0.6, 0.6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.16666667, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.523889, 1.1893599, 1.0954571, 1), Color(1.2619445, 1.09468, 1.0477285, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6wdhb"]
resource_name = "slash1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.066, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5707964, 1.0471976, 2.0943952, 1.5707964]
}

[sub_resource type="Animation" id="Animation_kb2vl"]
resource_name = "slash2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5707964, 2.356194490192345, 0.7853981633974483, 1.5707964]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.1666, 0.23241149),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(50, 20), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1005234, 0.23333335, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.6, 0.6), Vector2(0.6, 0.6), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.23333335, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.25516, 1.25516, 1.25516, 1), Color(1.25516, 1.25516, 1.25516, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6j4cb"]
resource_name = "slash3"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666, 0.2333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.5707964, 0.0, 3.1415927, 1.5707964]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.23333333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(40, -30), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.065792955, 0.17601752, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.7), Vector2(0.7, 0.7), Vector2(0.5, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.23333335, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.4441112, 1.4441112, 1.2431003, 1), Color(1.4441112, 1.4441112, 1.2431003, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6wag"]
_data = {
&"RESET": SubResource("Animation_d6wag"),
&"dash": SubResource("Animation_ksptp"),
&"slash1": SubResource("Animation_6wdhb"),
&"slash2": SubResource("Animation_kb2vl"),
&"slash3": SubResource("Animation_6j4cb")
}

[node name="Sword" type="Marker2D" unique_id=1328130014]
script = ExtResource("1_goa0h")

[node name="slashArea1" type="Area2D" parent="." unique_id=511266184]
position = Vector2(70, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="slashArea1" unique_id=1325699062]
polygon = PackedVector2Array(-9, -22, -13, 20, 155, 127, 212, 2, 160, -125)

[node name="slashArea2" type="Area2D" parent="." unique_id=146451732]
position = Vector2(70, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="slashArea2" unique_id=925110507]
polygon = PackedVector2Array(-9, -23, -11, 20, 139, 232, 266, 122, 288, 0, 256, -126, 136, -218)

[node name="slashArea3" type="Area2D" parent="." unique_id=1311888148]
position = Vector2(70, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="slashArea3" unique_id=502064818]
polygon = PackedVector2Array(-12, -19, -12, 18, 51, 293, 284, 176, 339, 3, 269, -196, 60, -279)

[node name="dash_area" type="Area2D" parent="." unique_id=1753993831]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dash_area" unique_id=28221914]
position = Vector2(182.5, 1)
shape = SubResource("RectangleShape2D_6wdhb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=376855912]
libraries/ = SubResource("AnimationLibrary_d6wag")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1302524696]
rotation = 1.5707964
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_6wdhb")
offset = Vector2(20, -350)

[connection signal="body_entered" from="slashArea1" to="." method="_on_slash_area_1_body_entered"]
[connection signal="body_exited" from="slashArea1" to="." method="_on_slash_area_1_body_exited"]
[connection signal="body_entered" from="slashArea2" to="." method="_on_slash_area_2_body_entered"]
[connection signal="body_exited" from="slashArea2" to="." method="_on_slash_area_2_body_exited"]
[connection signal="body_entered" from="slashArea3" to="." method="_on_slash_area_3_body_entered"]
[connection signal="body_exited" from="slashArea3" to="." method="_on_slash_area_3_body_exited"]
[connection signal="body_entered" from="dash_area" to="." method="_on_dash_area_body_entered"]
[connection signal="body_exited" from="dash_area" to="." method="_on_dash_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
